--- a/table.html
+++ b/table.html
@@ -5,41 +5,79 @@
         <link rel="stylesheet" href="table.css">
     </head>
     <body>
-        <h1 align="center">Student Data</h1>
         <div>
-            <table border="2" cellpadding="10" cellspacing="0">
-                <tr>
-                    <th>S.No.</th>
-                    <th>Name</th>
-                    <th>Phone No.</th>
-                    <th>City</th>
-                    <th>Gender</th>
-                    <th>Hobbies</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>Tarun Agrawal</td>
-                    <td>9116320360</td>
-                    <td>Bharatpur</td>
-                    <td>Male</td>
-                    <td rowspan="2">Playing Chess, Eating out with freinds</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Virendra Kumar</td>
-                    <td>9950240360</td>
-                    <td>Agra</td>
-                    <td>Male</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Surbhi Garg</td>
-                    <td>8979403567</td>
-                    <td>Gwalior</td>
-                    <td>Female</td>
-                    <td>Dancing, Exploring new places</td>
-                </tr>
-            </table>
+            <h1 align="center">Student Data</h1>
+            <div id="Table">
+                <table border="2" cellpadding="10" cellspacing="0">
+                    <tr>
+                        <th>S.No.</th>
+                        <th>Name</th>
+                        <th>Phone No.</th>
+                        <th>City</th>
+                        <th>Gender</th>
+                        <th>Hobbies</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Tarun Agrawal</td>
+                        <td>9116320360</td>
+                        <td>Bharatpur</td>
+                        <td>Male</td>
+                        <td rowspan="2">Playing Chess, Eating out with freinds</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Virendra Kumar</td>
+                        <td>9950240360</td>
+                        <td>Agra</td>
+                        <td>Male</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Surbhi Garg</td>
+                        <td>8979403567</td>
+                        <td>Gwalior</td>
+                        <td>Female</td>
+                        <td>Dancing, Exploring new places</td>
+                    </tr>
+                </table>
+            </div>
         </div>
+        <div>
+            <h1 align="center">Concepts Demo</h1>
+            <div class="container">
+                <h3 align="center">Position</h3>
+                <div class="static">This is an example of static position.</div>
+                <div class="relative">This element is relative to the above element.</div>
+            </div>
+
+            <div class="container">
+                <h3 align="center">Float</h3>
+                <div class="left">Floating Left</div>
+                <div class="right">Floating Right</div>
+            </div>
+
+            <div class="container">
+                <h3 align="center">Display</h3>
+                <div class="para">
+                    Showing <p class="inline">paragraph </p> tag as inline by overriding as it is block by default.
+                </div>
+                <br/>
+                <div class="span"> 
+                    Showing <span class="block">Span</span> tag as block by overriding as it is inline by default.
+                </div>
+            </div>
+
+            <div class="container">
+                <h3 align="center">Visiblity</h3>
+                <div class="visible">Visible Block</div>
+                * The content is visible.
+                <br/>
+                <div class="hidden">Hidden block</div>
+                * The content is hidden.
+                <br/>
+            </div>
+        </div>  
     </body>
 </html>
+
